fix: allow to horizontal scroll if entry field content is not fully displayed

--- a/src/pages/entries/entries.scss
+++ b/src/pages/entries/entries.scss
@@ -1,3 +1,5 @@
 page-entries {
-
+ .entryContent {
+   overflow-x: auto
+ }
 }
